--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <ol id = "messages"></ol>
         
         <form id ="message-form">
+            <input name = "user" type= "user" placeholder="User"/> 
             <input name = "message" type= "text" placeholder="Message"/>
             <button>Send</button>
             
