--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,42 @@
 
     <head>
         <meta  charset="utf-8">
-
+        <link rel = "stylesheet" href ="/css/styles.css">
         <script src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     </head>
 
-    <body>
+    <body class = "chat">
+      <div class ="chat__sidebar">
+        <h3>People</h3>
+        <div id = "users"> </div>
+      </div>
 
+      <div class ="chat__main">
+        <ol id = "messages" class="chat__messages"></ol>
 
-        <p> Welcome to the chat app</p>
-        <ol id = "messages"></ol>
+        <div class ="chat__footer">
+
 
         <form id ="message-form">
-            <input name = "user" type= "user" placeholder="User"/>
-            <input name = "message" type= "text" placeholder="Message"/>
-            <button>Send</button>
-        </form>
-        <button id = "send-location">Send Location </button>
-        
+          <input name = "user" type= "user" placeholder="User"    autocomplete="off"/>
+          <input name = "message" type= "text" placeholder="Message" autofocus autocomplete="off"/>
+              <button>Send</button>
+          </form>
+          <button id = "send-location">Send Location </button>
+
+        </div>
+
+
+
+
+
+
+      </div>
+
+
+
+
 
         <script src = "/socket.io/socket.io.js"></script>
         <script src = "/js/index.js"></script>
