--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <head>
         <meta  charset="utf-8">
         <link rel = "stylesheet" href ="/css/styles.css">
-        <script src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src = "/js/libs/jquery-3.3.1.min.js"></script>
+
 
     </head>
 
@@ -40,7 +41,7 @@
 
 
 
-
+        <script src = "/js/libs/moment.js "></script>
         <script src = "/socket.io/socket.io.js"></script>
         <script src = "/js/index.js"></script>
 
